services/oauth-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-auth-domain
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: auth.kristinn.pro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
  tls:
  - hosts:
    - auth.kristinn.pro
    secretName: cloudflare-tls
